# res

./: .bandit  .cfnnag_global_suppress_list  .coveragerc  .crux_template.md  .editorconfig  .gitignore  .pylintrc  .viperlightignore  CHANGELOG.md  Config  NOTICE.txt  README.md  RES_VERSION.txt  THIRD_PARTY_LICENSES.txt  buildspec.yml  cdk.json  codeCoverage.yml  codescan-postbuild-custom.sh  pyproject.toml  res-admin-windows.ps1  res-admin.sh  software_versions.yml  sonar-project.properties  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
deployment/: integrated-digital-engineering-on-aws.template  values.yaml
deployment/ecr/idea-administrator/: Dockerfile  cfn_params_2_values.sh
deployment/idea/codebuild/code_scan/: buildspec-idea-code-scan-bandit.yml  buildspec-idea-code-scan-npm.yml  buildspec-idea-code-scan-safety.yml
deployment/idea/codebuild/integration_tests/: buildspec-idea-integration-tests.yml
requirements/: build.in  build.txt  dev.in  dev.txt  doc.in  doc.txt  idea-administrator.in  idea-administrator.txt  idea-cluster-manager.in  idea-cluster-manager.txt  idea-dev-lambda.in  idea-dev-lambda.txt  idea-scheduler.in  idea-scheduler.txt  idea-sdk.in  idea-sdk.txt  idea-virtual-desktop-controller.in  idea-virtual-desktop-controller.txt  library.in  library.txt  lint.in  lint.txt  tests.in  tests.txt
source/idea/: README.md  app.py  constants.py
source/idea/batteries_included/: __init__.py  stack.py
source/idea/batteries_included/parameters/: __init__.py  common.py  customdomain.py  (+3 more)
source/idea/idea-administrator/: README.md
source/idea/idea-cluster-manager/: README.md
source/idea/idea-dcv-connection-gateway/: index.html
source/idea/pipeline/: README.md  stack.py  utils.py
source/idea/utils/: update_ami_list.py
source/res/host_modules/: go.mod  go.sum  modules.json
source/res/host_modules_pipeline/: README.md  stack.py
source/tests/: header.py
source/tests/aws_proxy_integration/: README.md  test_describe_file_systems.py  test_list_budgets.py  test_list_efs.py  util.py
source/tests/integration/: conftest.py
tasks/: __init__.py  admin.py  apispec.py  build.py  clean.py  cli.py  devtool.py  docker.py  idea.py  integ_tests.py  package.py  release.py  requirements.py  tests.py  web_portal.py
tasks/tools/: build_tool.py  clean_tool.py  infra_ami_package_tool.py  open_api_tool.py  package_tool.py  typings_generator.py
tests/: RELEASE_PIPELINE.sh  generate_ami_list.py
tests/modules/: check_python_libs.sh  code_scan.sh  github_release.py  inclusive_scanner.py  validate_cfn_templates.sh  verify_documentation.sh  viperlight.sh
tests/modules/vdc/: generate_dcv_host_files.py
(+1124 files in other folders)
